--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <a class="logotype" href="./index.html">Web<span class="logotype-span">Studio</span></a>
     <ul class="list"> 
         <li class="made-item">
-        <a class="menu-link" href="./index.html">Studio</a>
+        <a class="menu-page" href="./index.html">Studio</a>
         </li>
         <li class="made-item">
             <a class="menu-link" href="">Portfolio</a>
@@ -126,25 +126,25 @@
             </svg>
                 </a>
         </li>
-        <li class="workers-button-list-icon">
-        <svg class="workers-button-icon" width="16" height="16">
-        <use href="./images/icons.svg.svg#icon-twitter-1">
+            <li class="workers-button-list-icon">
+            <svg class="workers-button-icon" width="16" height="16">
+            <use href="./images/icons.svg.svg#icon-twitter-1">
         </use>
-    </svg>
-    </li>
-    <li class="workers-button-list-icon">
-    <svg class="workers-button-icon" width="16" height="16">
-    <use href="./images/icons.svg.svg#icon-facebook-1"></use>
-    </svg>
-    </li>
-    <li class="workers-button-list-icon">
-    <svg class="portfolio-button-icon" width="16" height="16">
-    <use href="./images/icons.svg.svg#icon-linkedin-1"></use>
-    </svg>
-    </li>
-            </ul>
-            </div> 
-            </li>
+        </svg>
+        </li>
+            <li class="workers-button-list-icon">
+            <svg class="workers-button-icon" width="16" height="16">
+            <use href="./images/icons.svg.svg#icon-facebook-1"></use>
+        </svg>
+        </li>
+            <li class="workers-button-list-icon">
+            <svg class="portfolio-button-icon" width="16" height="16">
+            <use href="./images/icons.svg.svg#icon-linkedin-1"></use>
+        </svg>
+        </li>
+        </ul>
+        </div> 
+        </li>
            
             <li class="workers-person">
             <img src="./images/img-1.jpg" 
