--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <a class="logotype" href="./index.html">Web<span class="logotype-span">Studio</span></a>
     <ul class="list"> 
         <li class="made-item">
-        <a class="menu-page" href="./index.html">Studio</a>
+        <a class="menu-link studio" href="./index.html">Studio</a>
         </li>
         <li class="made-item">
             <a class="menu-link" href="">Portfolio</a>
