--- a/index.html
+++ b/index.html
@@ -265,66 +265,94 @@
         <h2 class="portfolio-images-title">Our Portfolio</h2>
             <ul class="portfolio-list">
             <li class="portfolio-list-item">
+               <div class="portfolio-portfolio">
                 <img src="./images/img-4.jpg" 
                 alt="Banking App App" 
                 width="360"
                 height="300"/>
+               <p class="portfolio-text"> 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+            </div>
                 <div class="app">
                 <h3 class="portfolio-main-title">Banking App</h3>
                 <p class="portfolio-text">App</p>
                 </div>
+                </a>
                 </li>
+
+
             <li class="portfolio-list-item">
+                <div class="portfolio-portfolio"> 
                 <img src="./images/img-5.jpg" 
                 alt="Cashless Payment Marketing" 
                 width="360"
                 height="300"/>
+                <p class="portfolio-text"> 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                </div>
                 <div class="app">
                 <h3 class="portfolio-main-title">Cashless Payment</h3>
                 <p class="portfolio-text">Marketing</p>
                 </div>
+            </a>
                 </li>
+
             <li class="portfolio-list-item">
+                <div class="portfolio-portfolio"> 
                 <img src="./images/img-6.jpg" 
                 alt="Meditation App App"
                 width="360"
                 height="300"/>
+                <p class="portfolio-text"> 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                </div>
                 <div class="app">
                 <h3 class="portfolio-main-title">Meditation App</h3>
                 <p class="portfolio-text">App</p>
-                    </div> 
+                    </div>
+                </a> 
                 </li>
-                        <li class="portfolio-list-item">
+                       
+                <li class="portfolio-list-item">
+                <div class="portfolio-portfolio"> 
                 <img src="./images/img-7.jpg" 
                 alt="Taxi Service Marketing"
                 width="360"
                 height="300"/>
+                <p class="portfolio-text"> 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+            </div>
                 <div class="app">
                 <h3 class="portfolio-main-title">Taxi Service</h3>
                 <p class="portfolio-text">Marketing</p>
                 </div>
+                    </a>
                 </li>
+
             <li class="portfolio-list-item">
+                <div class="portfolio-portfolio"> 
                 <img src="./images/img-8.jpg" 
                 alt="Screen Illustrations Design"
                 width="360"
                 height="300"/>
+                <p class="portfolio-text"> 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+            </div>
             <div class="app">
                 <h3 class="portfolio-main-title">Screen Illustrations</h3>
                 <p class="portfolio-text">Design</p>
                 </div>
+                </a>
                 </li>
+
             <li class="portfolio-list-item">
+                <div class="portfolio-portfolio"> 
                 <img src="./images/img-9.jpg" 
                 alt="Online Courses Marketing"
                 width="360"
                 height="300"/>
-                <div class="app">
-                            <h3 class="portfolio-main-title">Online Courses</h3>
+                <p class="portfolio-text"> 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+            </div>
+            <div class="app">
+                <h3 class="portfolio-main-title">Online Courses</h3>
                 <p class="portfolio-text">Marketing</p>
-
-
-                                </div>
+                </div>
+                </a>
             </li>
         </ul>
         
