--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>goit-markup-hw-03</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700&display=swap">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css" integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg==" crossorigin="anonymous" referrerpolicy="no-referrer">
     <link rel="stylesheet" href="./css/styles.css">
@@ -121,7 +121,7 @@
             <ul class="workers-button">
                 <li class="workers-button-list-icon">
                 <a href="#" class="button-liton-liton">
-                    <svg class="workers-button-icon" width="16" height="16">
+                    <svg class="workers-button-icon" width="12" height="12">
                 <use href="./images/icons.svg.svg#icon-instagram-2"></use>
             </svg>
                 </a>
@@ -271,13 +271,12 @@
                 width="360"
                 height="300"/>
                <p class="portfolio-text"> 14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
-            </div>
-                <div class="app">
+               </div>
+               <div class="app">
                 <h3 class="portfolio-main-title">Banking App</h3>
                 <p class="portfolio-text">App</p>
                 </div>
-                </a>
-                </li>
+            </li>
 
 
             <li class="portfolio-list-item">
@@ -292,7 +291,6 @@
                 <h3 class="portfolio-main-title">Cashless Payment</h3>
                 <p class="portfolio-text">Marketing</p>
                 </div>
-            </a>
                 </li>
 
             <li class="portfolio-list-item">
@@ -307,7 +305,6 @@
                 <h3 class="portfolio-main-title">Meditation App</h3>
                 <p class="portfolio-text">App</p>
                     </div>
-                </a> 
                 </li>
                        
                 <li class="portfolio-list-item">
@@ -322,7 +319,6 @@
                 <h3 class="portfolio-main-title">Taxi Service</h3>
                 <p class="portfolio-text">Marketing</p>
                 </div>
-                    </a>
                 </li>
 
             <li class="portfolio-list-item">
@@ -337,7 +333,6 @@
                 <h3 class="portfolio-main-title">Screen Illustrations</h3>
                 <p class="portfolio-text">Design</p>
                 </div>
-                </a>
                 </li>
 
             <li class="portfolio-list-item">
@@ -352,8 +347,7 @@
                 <h3 class="portfolio-main-title">Online Courses</h3>
                 <p class="portfolio-text">Marketing</p>
                 </div>
-                </a>
-            </li>
+                </li>
         </ul>
         
                 </div>
