--- a/index.html
+++ b/index.html
@@ -358,13 +358,13 @@
 
 <!--PAGE FOOTER-->
 <footer class="footer-block">
-    <div class="container">
+     <div class="container">
     <a class="footer-logo" href="./index.html">Web<span class="footer-span">Studio</span></a>
         <p class="footer-paragraph">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </div>
 
     <div class="container-container">
-        <p class="footer-paragraph-paragraf">Social media</p>
+        <h3 class="footer-paragraph-paragraf">Social media</h3>
         <ul class="workers-button">
             <li class="workers-button-list-icon">
             <a href="#" class="button-liton-liton">
@@ -391,9 +391,6 @@
 </li>
         </ul>
         </div>
-        
-
-
-    </footer>
+        </footer>
 </body>
 </html>
