--- a/index.html
+++ b/index.html
@@ -358,17 +358,18 @@
 
 <!--PAGE FOOTER-->
 <footer class="footer-block">
+    <div>
      <div class="container">
     <a class="footer-logo" href="./index.html">Web<span class="footer-span">Studio</span></a>
         <p class="footer-paragraph">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </div>
 
     <div class="container-container">
-        <h3 class="footer-paragraph-paragraf">Social media</h3>
+        <p class="footer-paragraph-paragraf">Social media</p>
         <ul class="workers-button">
             <li class="workers-button-list-icon">
             <a href="#" class="button-liton-liton">
-                <svg class="workers-button-icon" width="16" height="16">
+                <svg class="workers-button-icon" width="24" height="24">
             <use href="./images/icons.svg#icon-instagram-2"></use>
         </svg>
             </a>
@@ -391,6 +392,7 @@
 </li>
         </ul>
         </div>
+    </div>
         </footer>
 </body>
 </html>
