--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 <div class="icon-container">
     <svg class="icon" 
     width="264" height="112">
-     <use href="images/icons.svg.#icon-Icon-1"></use>
+     <use href="./images/icons.svg#icon-antenna"></use>
      
 </svg>
 
@@ -77,7 +77,7 @@
             <div class="icon-container">
                 <svg class="icon" 
                 width="264" height="112">
-                 <use href="images/icons.svg.#icon-Icon-3"></use>
+                 <use href="./images/icons.svg#icon-clock"></use>
             </svg>
             </div>
             <h3 class="made-menu-item-name">Punctuality</h3>
@@ -87,7 +87,7 @@
             <div class="icon-container">
                 <svg class="icon" 
                 width="264" height="112">
-                <use href="images/icons.svg.#icon-Icon-3-1"></use>
+                <use href="./images/icons.svg#icon-diagram"></use>
             </svg>
             </div>
             <h3 class="made-menu-item-name">Diligence</h3>
@@ -97,7 +97,7 @@
             <div class="icon-container">
                 <svg class="icon" 
                 width="264" height="112">
-                 <use href="images/icons.svg.#icon-Icon-4"></use>
+                 <use href="./images/icons.svg#icon-astronaut"></use>
             </svg>
             </div>
             <h3 class="made-menu-item-name">Technologies</h3>
@@ -370,24 +370,24 @@
             <li class="workers-button-list-icon">
             <a href="#" class="button-liton-liton">
                 <svg class="workers-button-icon" width="24" height="24">
-            <use href="./images/icons.svg#icon-instagram-2"></use>
+            <use href="./images/icons.svg#icon-instagram1"></use>
         </svg>
             </a>
     </li>
     <li class="workers-button-list-icon">
-    <svg class="workers-button-icon" width="16" height="16">
-    <use href="./images/icons.svg#icon-twitter-1">
+    <svg class="workers-button-icon" width="16" height="24">
+    <use href="./images/icons.svg#icon-twitter2">
     </use>
 </svg>
 </li>
 <li class="workers-button-list-icon">
-<svg class="workers-button-icon" width="16" height="16">
-<use href="./images/icons.svg#icon-facebook-1"></use>
+<svg class="workers-button-icon" width="16" height="24">
+<use href="./images/icons.svg#icon-facebook3"></use>
 </svg>
 </li>
 <li class="workers-button-list-icon">
-<svg class="portfolio-button-icon" width="16" height="16">
-<use href="./images/icons.svg#icon-linkedin-1"></use>
+<svg class="portfolio-button-icon" width="16" height="24">
+<use href="./images/icons.svg#icon-linkedin4-1"></use>
 </svg>
 </li>
         </ul>
