--- a/index.html
+++ b/index.html
@@ -129,20 +129,26 @@
                 </a>
         </li>
             <li class="workers-button-list-icon">
+                <a href="#" class="button-liton-liton">
             <svg class="workers-button-icon" width="16" height="16">
             <use href="./images/icons.svg#icon-twitter-1">
         </use>
         </svg>
+                </a>
         </li>
             <li class="workers-button-list-icon">
+                <a href="#" class="button-liton-liton">
             <svg class="workers-button-icon" width="16" height="16">
             <use href="./images/icons.svg#icon-facebook-1"></use>
         </svg>
+                </a>
         </li>
             <li class="workers-button-list-icon">
+                <a href="#" class="button-liton-liton">
             <svg class="portfolio-button-icon" width="16" height="16">
             <use href="./images/icons.svg#icon-linkedin-1"></use>
         </svg>
+                </a>
         </li>
         </ul>
         </div> 
@@ -358,8 +364,8 @@
 
 <!--PAGE FOOTER-->
 <footer class="footer-block">
-    <div>
-     <div class="container">
+    <div class="footer-conteinet">
+     <div class="container-footer">
     <a class="footer-logo" href="./index.html">Web<span class="footer-span">Studio</span></a>
         <p class="footer-paragraph">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </div>
@@ -368,28 +374,34 @@
         <p class="footer-paragraph-paragraf">Social media</p>
         <ul class="workers-button">
             <li class="workers-button-list-icon">
-            <a href="#" class="button-liton-liton">
-                <svg class="workers-button-icon" width="24" height="24">
-            <use href="./images/icons.svg#icon-instagram-2"></use>
+                <a href="#" class="button-liton-liton">
+                    <svg class="workers-button-icon" width="24" height="24">
+                <use href="./images/icons.svg#icon-instagram-2"></use>
+            </svg>
+                </a>
+        </li>
+            <li class="workers-button-list-icon">
+                <a href="#" class="button-liton-liton">
+            <svg class="workers-button-icon" width="24" height="24">
+            <use href="./images/icons.svg#icon-twitter-1">
+        </use>
         </svg>
-            </a>
-    </li>
-    <li class="workers-button-list-icon">
-    <svg class="workers-button-icon" width="16" height="24">
-    <use href="./images/icons.svg#icon-twitter-1">
-    </use>
-</svg>
-</li>
-<li class="workers-button-list-icon">
-<svg class="workers-button-icon" width="16" height="24">
-<use href="./images/icons.svg#icon-facebook-1"></use>
-</svg>
-</li>
-<li class="workers-button-list-icon">
-<svg class="portfolio-button-icon" width="16" height="24">
-<use href="./images/icons.svg#icon-linkedin-1"></use>
-</svg>
-</li>
+                </a>
+        </li>
+            <li class="workers-button-list-icon">
+                <a href="#" class="button-liton-liton">
+            <svg class="workers-button-icon" width="24" height="24">
+            <use href="./images/icons.svg#icon-facebook-1"></use>
+        </svg>
+                </a>
+        </li>
+            <li class="workers-button-list-icon">
+                <a href="#" class="button-liton-liton">
+            <svg class="portfolio-button-icon" width="24" height="24">
+            <use href="./images/icons.svg#icon-linkedin-1"></use>
+        </svg>
+                </a>
+        </li>
         </ul>
         </div>
     </div>
