--- a/index.html
+++ b/index.html
@@ -64,9 +64,8 @@
 <div class="icon-container">
     <svg class="icon" 
     width="264" height="112">
-     <use href="./images/icons.svg#icon-antenna"></use>
-     
-</svg>
+     <use href="./images/icons.svg#icon-antenna-1"></use>
+     </svg>
 
 </div>
             <h3 class="made-menu-item-name">Strategy</h3>
@@ -77,7 +76,7 @@
             <div class="icon-container">
                 <svg class="icon" 
                 width="64" height="64">
-                 <use href="./images/icons.svg#icon-clock"></use>
+                 <use href="./images/icons.svg#icon-clock-1"></use>
             </svg>
             </div>
             <h3 class="made-menu-item-name">Punctuality</h3>
@@ -87,7 +86,7 @@
             <div class="icon-container">
                 <svg class="icon" 
                 width="64" height="64">
-                <use href="./images/icons.svg#icon-diagram"></use>
+                <use href="./images/icons.svg#icon-diagram-1"></use>
             </svg>
             </div>
             <h3 class="made-menu-item-name">Diligence</h3>
@@ -97,7 +96,7 @@
             <div class="icon-container">
                 <svg class="icon" 
                 width="64" height="64">
-                 <use href="./images/icons.svg#icon-astronaut"></use>
+                 <use href="./images/icons.svg#icon-astronaut-1"></use>
             </svg>
             </div>
             <h3 class="made-menu-item-name">Technologies</h3>
@@ -124,14 +123,14 @@
                 <li class="workers-button-list-icon">
                 <a href="#" class="button-liton-liton">
                     <svg class="workers-button-icon" width="16" height="16">
-                <use href="./images/icons.svg#icon-instagram-2"></use>
+                <use href="./images/icons.svg#icon-instagram"></use>
             </svg>
                 </a>
         </li>
             <li class="workers-button-list-icon">
                 <a href="#" class="button-liton-liton">
             <svg class="workers-button-icon" width="16" height="16">
-            <use href="./images/icons.svg#icon-twitter-1">
+            <use href="./images/icons.svg#icon-twitter">
         </use>
         </svg>
                 </a>
@@ -139,14 +138,14 @@
             <li class="workers-button-list-icon">
                 <a href="#" class="button-liton-liton">
             <svg class="workers-button-icon" width="16" height="16">
-            <use href="./images/icons.svg#icon-facebook-1"></use>
+            <use href="./images/icons.svg#icon-facebook"></use>
         </svg>
                 </a>
         </li>
             <li class="workers-button-list-icon">
                 <a href="#" class="button-liton-liton">
             <svg class="portfolio-button-icon" width="16" height="16">
-            <use href="./images/icons.svg#icon-linkedin-1"></use>
+            <use href="./images/icons.svg#icon-linkedin"></use>
         </svg>
                 </a>
         </li>
@@ -166,24 +165,24 @@
                 <li class="workers-button-list-icon">
                 <a href="#" class="button-liton-liton">
                     <svg class="workers-button-icon" width="16" height="16">
-                <use href="./images/icons.svg#icon-instagram-2"></use>
+                <use href="./images/icons.svg#icon-instagram"></use>
             </svg>
                 </a>
         </li>
         <li class="workers-button-list-icon">
         <svg class="workers-button-icon" width="16" height="16">
-        <use href="./images/icons.svg#icon-twitter-1">
+        <use href="./images/icons.svg#icon-twitter">
         </use>
     </svg>
     </li>
     <li class="workers-button-list-icon">
     <svg class="workers-button-icon" width="16" height="16">
-    <use href="./images/icons.svg#icon-facebook-1"></use>
+    <use href="./images/icons.svg#icon-facebook"></use>
     </svg>
     </li>
     <li class="workers-button-list-icon">
     <svg class="portfolio-button-icon" width="16" height="16">
-    <use href="./images/icons.svg#icon-linkedin-1"></use>
+    <use href="./images/icons.svg#icon-linkedin"></use>
     </svg>
     </li>
             </ul>
@@ -203,24 +202,24 @@
                 <li class="workers-button-list-icon">
                 <a href="#" class="button-liton-liton">
                     <svg class="workers-button-icon" width="16" height="16">
-                <use href="./images/icons.svg#icon-instagram-2"></use>
+                <use href="./images/icons.svg#icon-instagram"></use>
             </svg>
                 </a>
         </li>
         <li class="workers-button-list-icon">
         <svg class="workers-button-icon" width="16" height="16">
-        <use href="./images/icons.svg#icon-twitter-1">
+        <use href="./images/icons.svg#icon-twitter">
         </use>
     </svg>
     </li>
     <li class="workers-button-list-icon">
     <svg class="workers-button-icon" width="16" height="16">
-    <use href="./images/icons.svg#icon-facebook-1"></use>
+    <use href="./images/icons.svg#icon-facebook"></use>
     </svg>
     </li>
     <li class="workers-button-list-icon">
     <svg class="portfolio-button-icon" width="16" height="16">
-    <use href="./images/icons.svg#icon-linkedin-1"></use>
+    <use href="./images/icons.svg#icon-linkedin"></use>
     </svg>
     </li>
             </ul>
@@ -240,24 +239,24 @@
                 <li class="workers-button-list-icon">
                 <a href="#" class="button-liton-liton">
                     <svg class="workers-button-icon" width="16" height="16">
-                <use href="./images/icons.svg#icon-instagram-2"></use>
+                <use href="./images/icons.svg#icon-instagram"></use>
             </svg>
                 </a>
         </li>
         <li class="workers-button-list-icon">
         <svg class="workers-button-icon" width="16" height="16">
-        <use href="./images/icons.svg#icon-twitter-1">
+        <use href="./images/icons.svg#icon-twitter">
         </use>
     </svg>
     </li>
     <li class="workers-button-list-icon">
     <svg class="workers-button-icon" width="16" height="16">
-    <use href="./images/icons.svg#icon-facebook-1"></use>
+    <use href="./images/icons.svg#icon-facebook"></use>
     </svg>
     </li>
     <li class="workers-button-list-icon">
     <svg class="portfolio-button-icon" width="16" height="16">
-    <use href="./images/icons.svg#icon-linkedin-1"></use>
+    <use href="./images/icons.svg#icon-linkedin"></use>
     </svg>
     </li>
             </ul>
@@ -376,14 +375,14 @@
             <li class="workers-button-list-icon">
                 <a href="#" class="button-liton-liton">
                     <svg class="workers-button-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-instagram-2"></use>
+                <use href="./images/icons.svg#icon-instagram"></use>
             </svg>
                 </a>
         </li>
             <li class="workers-button-list-icon">
                 <a href="#" class="button-liton-liton">
             <svg class="workers-button-icon" width="24" height="24">
-            <use href="./images/icons.svg#icon-twitter-1">
+            <use href="./images/icons.svg#icon-twitter">
         </use>
         </svg>
                 </a>
@@ -391,14 +390,14 @@
             <li class="workers-button-list-icon">
                 <a href="#" class="button-liton-liton">
             <svg class="workers-button-icon" width="24" height="24">
-            <use href="./images/icons.svg#icon-facebook-1"></use>
+            <use href="./images/icons.svg#icon-facebook"></use>
         </svg>
                 </a>
         </li>
             <li class="workers-button-list-icon">
                 <a href="#" class="button-liton-liton">
             <svg class="portfolio-button-icon" width="24" height="24">
-            <use href="./images/icons.svg#icon-linkedin-1"></use>
+            <use href="./images/icons.svg#icon-linkedin"></use>
         </svg>
                 </a>
         </li>
