--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
         </li>
             <li class="workers-button-list-icon">
                 <a href="#" class="button-liton-liton">
-            <svg class="portfolio-button-icon" width="16" height="16">
+            <svg class="workers-button-icon" width="16" height="16">
             <use href="./images/icons.svg#icon-linkedin"></use>
         </svg>
                 </a>
@@ -218,7 +218,7 @@
     </svg>
     </li>
     <li class="workers-button-list-icon">
-    <svg class="portfolio-button-icon" width="16" height="16">
+    <svg class="workers-button-icon" width="16" height="16">
     <use href="./images/icons.svg#icon-linkedin"></use>
     </svg>
     </li>
@@ -255,7 +255,7 @@
     </svg>
     </li>
     <li class="workers-button-list-icon">
-    <svg class="portfolio-button-icon" width="16" height="16">
+    <svg class="workers-button-icon" width="16" height="16">
     <use href="./images/icons.svg#icon-linkedin"></use>
     </svg>
     </li>
@@ -396,7 +396,7 @@
         </li>
             <li class="workers-button-list-icon">
                 <a href="#" class="button-liton-liton">
-            <svg class="portfolio-button-icon" width="24" height="24">
+            <svg class="workers-button-icon" width="24" height="24">
             <use href="./images/icons.svg#icon-linkedin"></use>
         </svg>
                 </a>
