--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
         <h3 class="made-menu-item-name">Strategy</h3>
             <p class="made-menu-item-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
                </li>
+    </div>
         <li class="made-menu-item">
     <div class="icon-container">
             <svg class="icon" 
@@ -79,6 +80,7 @@
             <h3 class="made-menu-item-name">Punctuality</h3>
             <p class="made-menu-item-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
         </li>
+
         <li class="made-menu-item">
     <div class="icon-container">
             <svg class="icon" 
