--- a/index.html
+++ b/index.html
@@ -219,21 +219,27 @@
                  </li>
 
                 <li class="workers-button-list-icon">
+                    <a href="#" class="button-liton-liton">
                     <svg class="workers-button-icon" width="16" height="16">
                 <use href="./images/icons.svg#icon-twitter"></use>
                     </svg>
+                    </a>
                 </li>
 
                 <li class="workers-button-list-icon">
+                    <a href="#" class="button-liton-liton">
                     <svg class="workers-button-icon" width="16" height="16">
                 <use href="./images/icons.svg#icon-facebook"></use>
                     </svg>
+                    </a>
                 </li>
 
                 <li class="workers-button-list-icon">
+                    <a href="#" class="button-liton-liton">
                     <svg class="workers-button-icon" width="16" height="16">
                 <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
+                    </a>
                 </li>
             </ul>
     </div>
@@ -258,21 +264,27 @@
                 </li>
 
                 <li class="workers-button-list-icon">
+                    <a href="#" class="button-liton-liton">
                    <svg class="workers-button-icon" width="16" height="16">
                 <use href="./images/icons.svg#icon-twitter"></use>
                    </svg>
+                    </a>
                 </li>
 
                 <li class="workers-button-list-icon">
+                    <a href="#" class="button-liton-liton">
                    <svg class="workers-button-icon" width="16" height="16">
                 <use href="./images/icons.svg#icon-facebook"></use>
                    </svg>
+                    </a>
                 </li>
 
                 <li class="workers-button-list-icon">
+                    <a href="#" class="button-liton-liton">
                     <svg class="workers-button-icon" width="16" height="16">
                 <use href="./images/icons.svg#icon-linkedin"></use>
                     </svg>
+                    </a>
                 </li>
             </ul>
         </div>
