--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 </a>
             </li>
             <li class="workers-button-list-icon">
-                <a href="#" class="button-liton-liton">
+                <a href="#" class="button-button-liton-liton">
             <svg class="workers-button-icon" width="16" height="16">
             <use href="./images/icons.svg#icon-linkedin"></use>
            </svg>
