--- a/index.html
+++ b/index.html
@@ -401,28 +401,28 @@
         <p class="footer-paragraph-paragraf">Social media</p>
         <ul class="workers-button">
             <li class="workers-button-list-icon">
-                <a href="#" class="button-liton-liton">
+                <a href="#" class="button-button-liton-liton">
                     <svg class="workers-button-icon" width="24" height="24">
                 <use href="./images/icons.svg#icon-instagram"></use>
                     </svg>
                 </a>
         </li>
             <li class="workers-button-list-icon">
-                <a href="#" class="button-liton-liton">
+                <a href="#" class="button-button-liton-liton">
             <svg class="workers-button-icon" width="24" height="24">
             <use href="./images/icons.svg#icon-twitter"></use>
             </svg>
                 </a>
         </li>
             <li class="workers-button-list-icon">
-                <a href="#" class="button-liton-liton">
+                <a href="#" class="button-button-liton-liton">
             <svg class="workers-button-icon" width="24" height="24">
             <use href="./images/icons.svg#icon-facebook"></use>
             </svg>
                 </a>
         </li>
             <li class="workers-button-list-icon">
-                <a href="#" class="button-liton-liton">
+                <a href="#" class="button-button-liton-liton">
             <svg class="workers-button-icon" width="24" height="24">
             <use href="./images/icons.svg#icon-linkedin"></use>
             </svg>
