--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
 
     <div class="container-container">
         <p class="footer-paragraph-paragraf">Social media</p>
-        <ul class="workers-button">
+        <ul class="workers-workers-button">
             <li class="workers-button-list-icon-icon">
                 <a href="#" class="button-button-liton-liton">
                     <svg class="workers-button-icon" width="24" height="24">
