--- a/index.html
+++ b/index.html
@@ -391,13 +391,13 @@
 
 <!--PAGE FOOTER-->
 <footer class="footer-block">
-    <div class="footer-conteinet">
+    <div class="footer-conteinet container">
      <div class="container-footer">
     <a class="footer-logo" href="./index.html">Web<span class="footer-span">Studio</span></a>
         <p class="footer-paragraph">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
     </div>
 
-    <div class="container-container">
+    <div class="container-container ">
         <p class="footer-paragraph-paragraf">Social media</p>
         <ul class="workers-workers-button">
             <li class="workers-button-list-icon-icon">
